--- a/Daratypes.ipynb
+++ b/Daratypes.ipynb
@@ -304,6 +304,143 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "290808ac-1a96-49d3-b803-41539cae77d6",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n",
+      "False\n"
+     ]
+    }
+   ],
+   "source": [
+    " #If it is not empty, it will return True, otherwise it will return False\n",
+    "my_str = 'Hello'\n",
+    "print(bool(my_str))\n",
+    "empty_str = ''\n",
+    "print(bool(empty_str))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b7715f28-8922-494b-b40d-c20913e4dbec",
+   "metadata": {},
+   "source": [
+    "### Boolean operations\n",
+    "- **and** : Returns True if both operands are True\n",
+    "- **or** : Returns True if either operand is True\n",
+    "- **not** : Returns the opposite boolean value of the operand\r",
+    " nd"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "f875fc34-ed5c-455f-976c-1b0167ae0400",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "False\n",
+      "True\n",
+      "False\n"
+     ]
+    }
+   ],
+   "source": [
+    "x = True\n",
+    "y = False\n",
+    "\n",
+    "print(x and y)  # Output: False\n",
+    "print(x or y)   # Output: True\n",
+    "print(not x) "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "33b852f8-10c5-47f7-b7f8-d4779fb49906",
+   "metadata": {},
+   "source": [
+    "### in operator\n",
+    "The in operator is used to check if a value is present in a sequence, such as a string, list, or tuple. It returns True if the value is found in the sequence, and False otherwise."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "1fea0bbf-9644-4a17-bc04-15f0980183da",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n",
+      "False\n"
+     ]
+    }
+   ],
+   "source": [
+    "message=\"Hello, world!\"\n",
+    "print(\"world\" in message)\n",
+    "print(\"Python\" in message)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "273500e1-cd28-4682-a1c5-afb66bb77c9b",
+   "metadata": {},
+   "source": [
+    "### Comparision operators\n",
+    "- `==` (equal to): Checks if two values are equal\r\n",
+    "- `!=` (not equal to): Checks if two values are not equal\r\n",
+    "- `<` (less than): Checks if the left value is less than the right value\r\n",
+    "- `>` (greater than): Checks if the left value is greater than the right value\r\n",
+    "- `<=` (less than or equal to): Checks if the left value is less than or equal to the right value\r\n",
+    "- `>=` (greater than or equal to): Checks if the left value is greater than or equal to the right valuevalue"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "b49398eb-7252-4f35-9484-4d0930da7643",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "False\n",
+      "True\n",
+      "True\n"
+     ]
+    }
+   ],
+   "source": [
+    "x = 5\n",
+    "y = 10\n",
+    "\n",
+    "print(x == y)   # Output: False\n",
+    "print(x != y)   # Output: True\n",
+    "print(x < y) "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d55e0550-f204-451f-ab32-ab5245914f01",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
    "cell_type": "markdown",
    "id": "29f06c20-6ba3-4214-856d-a6f6a5503fe2",
    "metadata": {},
