--- a/Daratypes.ipynb
+++ b/Daratypes.ipynb
@@ -434,11 +434,175 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "d55e0550-f204-451f-ab32-ab5245914f01",
    "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n",
+      "True\n"
+     ]
+    }
+   ],
+   "source": [
+    "x = 5\n",
+    "\n",
+    "print(0 < x < 10)    # Output: True\n",
+    "print(0 < x and x < 10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "f58401eb-ad32-462c-8997-761a68a8615b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "bool(0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "247d39be-b257-415d-b758-fb11c64cbbfb",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "bool(1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "adfb6bc5-ed21-441d-8027-515661988414",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "bool(None)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "500ebe17-eba4-49be-927d-70e7ca049b79",
+   "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "x=None\n",
+    "my_boolean =bool(x)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "515d7a02-9bfd-46e6-bf44-2ca617a10d43",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "bool"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "type(my_boolean)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "26f18e48-b435-41e7-92b9-95128ee39df3",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'true' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[12], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m my_boolean \u001b[38;5;241m=\u001b[39m\u001b[43mtrue\u001b[49m\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'true' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "my_boolean =true"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "581dded3-f9ac-40c8-8dc5-c1ba1f2849ad",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "my_boolean=True"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "a80f90f4-c35f-4ce6-8d93-f367ce5baad2",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "my_string=''\n",
+    "my_boolean=bool(my_string)\n",
+    "my_boolean"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -453,10 +617,10 @@
    "id": "0eb21d2d-b13d-46d4-a48b-0206c386f575",
    "metadata": {},
    "source": [
+    "- Ordered\n",
     "- Mutable\n",
-    "- Changeable\n",
-    "- Contains an ordered sequence of elements\n",
-    "- Defined by having values between square brackets."
+    "- Heterogeneous Elements: Can contain different types of data\n",
+    "- Variable Length: Lists can grow or shrink dynamically as elements are added or removed. They do not have a fixed size, allowing for flexibility in managing varying amounts of data.\n"
    ]
   },
   {
@@ -1185,9 +1349,85 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "8cf71d05-6109-4172-8738-b1dc4db7548e",
+   "metadata": {},
+   "source": [
+    "### Indexing and slicing"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "359618f0-a914-428a-9dd0-720e196523b4",
+   "metadata": {},
+   "source": [
+    "#### Indexing\n",
+    "Indexing starts at 0: In most programming languages, including Python, indexing starts from 0. The first element in a list has an index of 0, the second element has an index of 1, and so on. The last element of a list can be accessed using the index len(list_name) - 1.\r\n",
+    "\r\n",
+    "Negative indexing: Lists also support negative indexing, where the index -1 refers to the last element, -2 refers to the second-to-last element, and so on. Negative indices count from the end of the list towards the beginning."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "a59f6f01-a4fe-4506-8bbb-d3db9f6fe0a8",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "apple\n",
+      "banana\n",
+      "cherry\n",
+      "banana\n"
+     ]
+    }
+   ],
+   "source": [
+    "fruits = [\"apple\", \"banana\", \"cherry\"]\n",
+    "print(fruits[0])     # Output: \"apple\"\n",
+    "print(fruits[1])     # Output: \"banana\"\n",
+    "print(fruits[-1])    # Output: \"cherry\"\n",
+    "print(fruits[-2])    # Output: \"banana\""
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "748bdf48-9175-42b3-87ca-c7a7622c40af",
+   "metadata": {},
+   "source": [
+    "#### Index error\n",
+    "Out-of-range indices: If you try to access an index that is outside the valid range of indices for a list, you'll get an IndexError"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "6cacbc6d-af39-4420-a5ee-b9f40513d5ff",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "IndexError",
+     "evalue": "list index out of range",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mIndexError\u001b[0m                                Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[16], line 2\u001b[0m\n\u001b[0;32m      1\u001b[0m fruits \u001b[38;5;241m=\u001b[39m [\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mapple\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mbanana\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mcherry\u001b[39m\u001b[38;5;124m\"\u001b[39m]\n\u001b[1;32m----> 2\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[43mfruits\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;241;43m3\u001b[39;49m\u001b[43m]\u001b[49m)\n",
+      "\u001b[1;31mIndexError\u001b[0m: list index out of range"
+     ]
+    }
+   ],
+   "source": [
+    "fruits = [\"apple\", \"banana\", \"cherry\"]\n",
+    "print(fruits[3])  # IndexError: list index out of range"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e94cb733-b0db-4ad0-8b36-078b6dcc908d",
+   "id": "ae9c0540-e526-4674-b785-08a2b5d5d24a",
    "metadata": {},
    "outputs": [],
    "source": []
