--- a/linearregression.ipynb
+++ b/linearregression.ipynb
@@ -861,9 +861,214 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "e28c60d0-e600-479a-bd21-8bfe23416741",
+   "metadata": {},
+   "source": [
+    "### Validation and testing\n",
+    "#### Test set\n",
+    "To estimate how well a model will perform on unseen data, we split our initial dataset into two different sets. One is for training on, and the other is for testing on.\n",
+    "\n",
+    "Sklearn provides a method `train_test_split()` in it's `model_selection` module to split our data."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "id": "a6e5f452-b01d-4b46-b21d-afd81d3f1b09",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Number of samples in dataset: 20640\n",
+      "Number of samples in:\n",
+      "    Training: 14448\n",
+      "    Testing: 6192\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn import datasets\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "\n",
+    "X, y = datasets.fetch_california_housing(return_X_y=True)\n",
+    "\n",
+    "print(f\"Number of samples in dataset: {len(X)}\")\n",
+    "\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.3)\n",
+    "\n",
+    "print(\"Number of samples in:\")\n",
+    "print(f\"    Training: {len(y_train)}\")\n",
+    "print(f\"    Testing: {len(y_test)}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "66e50723-9f69-457a-b522-a13c45b7277b",
+   "metadata": {},
+   "source": [
+    "## The Validation Set\n",
+    "\n",
+    "The decision to choose between two models cannot be based on the testing set. If that were the case, the decisions would be biased, leaning towards our expectations. \n",
+    "\n",
+    "Making a decision based on the testing set is analogous to seeing the answers on a test.\n",
+    "\n",
+    "Instead, we create another set, called the __validation set__. This set is used for comparing models or different options for the same model, and the process is referred to as __cross validation.__"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "id": "aea010c1-47b9-4733-85b1-04959a4f2b62",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Number of samples in:\n",
+      "    Training: 14448\n",
+      "    Validation: 1858\n",
+      "    Testing: 4334\n"
+     ]
+    }
+   ],
+   "source": [
+    "X_test, X_validation, y_test, y_validation = train_test_split(\n",
+    "    X_test, y_test, test_size=0.3\n",
+    ")\n",
+    "\n",
+    "print(\"Number of samples in:\")\n",
+    "print(f\"    Training: {len(y_train)}\")\n",
+    "print(f\"    Validation: {len(y_validation)}\")\n",
+    "print(f\"    Testing: {len(y_test)}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1b3bf233-dc50-4475-a258-14ad3c925cb1",
+   "metadata": {},
+   "source": [
+    "## Validation vs Test Sets\n",
+    "The difference is that the validation set, not the test set, is employed to make choices about models.\n",
+    "\n",
+    "Such choices may include the following:\n",
+    "\n",
+    "- Should I deploy the linear regression model or the neural network?\n",
+    "- Should I use the model that was trained on all the features of just the three I selected?\n",
+    "- Which hyperparameters should I select (which you will learn about shortly)?\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "id": "e15c602f-e3f0-47bd-bba6-0d9a7b814ed0",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "SVRTrain Loss: 1.3544886243358367 | Validation Loss: 1.5311370645522573 | Test Loss: 1.3340095977127346\n",
+      "DecisionTreeRegressorTrain Loss: 5.165160688947101e-32 | Validation Loss: 0.5429560380030678 | Test Loss: 0.5373470097361097\n",
+      "LinearRegressionTrain Loss: 0.5153944819765206 | Validation Loss: 0.6206055417000618 | Test Loss: 0.5218778112242356\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "# ML algorithms you will later know, don't panic\n",
+    "from sklearn.linear_model import LinearRegression\n",
+    "from sklearn.metrics import mean_squared_error\n",
+    "from sklearn.svm import SVR\n",
+    "from sklearn.tree import DecisionTreeRegressor\n",
+    "\n",
+    "np.random.seed(2)\n",
+    "\n",
+    "models=[SVR(),\n",
+    "       DecisionTreeRegressor(splitter='random'),\n",
+    "       LinearRegression()\n",
+    "      ]\n",
+    "\n",
+    "for model in models:\n",
+    "    model.fit(X_train,y_train)\n",
+    "    \n",
+    "    y_train_pred=model.predict(X_train)\n",
+    "    y_validation_pred=model.predict(X_validation)\n",
+    "    y_test_pred=model.predict(X_test)\n",
+    "\n",
+    "    train_loss=mean_squared_error(y_train,y_train_pred)\n",
+    "    validation_loss=mean_squared_error(y_validation,y_validation_pred)\n",
+    "    test_loss=mean_squared_error(y_test,y_test_pred)\n",
+    "\n",
+    "    print(f\"{model.__class__.__name__}\" f\"Train Loss: {train_loss} | Validation Loss: {validation_loss} | \"\n",
+    "        f\"Test Loss: {test_loss}\"\n",
+    "    )\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "93a40208-05a3-4099-a1f9-b467f38509a4",
+   "metadata": {},
+   "source": [
+    "### Seeding\n",
+    "For each run to be the same, (or to exhibit some phenomena similar to the case above), we should always seed all functions using random numbers."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2132e851-a843-4764-9bec-6f99e62f460f",
+   "metadata": {},
+   "source": [
+    "### Data leakage"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "id": "ef656893-54cd-40ad-a4a9-daef6640fa90",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Validation loss: 0.6206055417000618\n",
+      "Validation loss: 0.6205569147203897\n"
+     ]
+    }
+   ],
+   "source": [
+    "def calculate_validation_loss(X_train, y_train, X_validation, y_validation):\n",
+    "    model = LinearRegression()\n",
+    "\n",
+    "    # Without data leakage, train on train, validate on validation\n",
+    "    model.fit(X_train, y_train)\n",
+    "    y_validation_pred = model.predict(X_validation)\n",
+    "    validation_loss = mean_squared_error(y_validation, y_validation_pred)\n",
+    "\n",
+    "    print(f\"Validation loss: {validation_loss}\")\n",
+    "    \n",
+    "# Without data leakage, train on train, validate on validation\n",
+    "calculate_validation_loss(X_train, y_train, X_validation, y_validation)\n",
+    "\n",
+    "# With data leakage, 50 samples from validation added\n",
+    "fail_X_train = np.concatenate((X_train, X_validation[:50]))\n",
+    "fail_y_train = np.concatenate((y_train, y_validation[:50]))\n",
+    "\n",
+    "calculate_validation_loss(fail_X_train, fail_y_train, X_validation, y_validation)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b5543e6b-7eef-4d3e-9b06-a11aecc65e70",
+   "id": "bfb2142d-100a-4e71-acaf-12407dbb8f48",
    "metadata": {},
    "outputs": [],
    "source": []
